unpackaged/main/default/objects/fferpcore__ScheduledJob__c/fferpcore__ScheduledJob__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__ScheduledJobHelp</customHelpPage>
    <description>A job that can be scheduled or run immediately</description>
    <label>Scheduled Job</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>