unpackaged/main/default/objects/fferpcore__ScheduledJob__c/fields/fferpcore__CronExpression__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CronExpression__c</fullName>
    <label>Cron Expression</label>
    <length>100</length>
    <type>Text</type>
</CustomField>