unpackaged/main/default/objects/fferpcore__ScheduledJob__c/fields/fferpcore__Implementation__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Implementation__c</fullName>
    <label>Implementation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>